styles/fields/buttons.css
button{
    all: unset;
    font-weight: 500;
    color: var(--text-highlight);
    padding: .75rem 1.5rem;
    border-radius: .5rem;
    cursor: pointer;

    &.btn-primary{
        color: white;
        background-color: #E43A12;

        &:hover, &:focus{
            background-color: #F3541c ;
        }
    }

    &.btn-secondary{
        margin: auto;
        border: 1px solid var(--text-highlight);

        &:hover, &:focus{
            color: #E43A12 ;
            outline: .25rem solid var(--surface-secondary);
        }
    }
}

